--- a/API/WorkSpaceFinal/StockWise/src/main/resources/application.properties
+++ b/API/WorkSpaceFinal/StockWise/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=StockWise
 
 spring.datasource.url=jdbc:mariadb://localhost:3306/restaurante
-spring.datasource.username=restaurante_user
-spring.datasource.password=claveSegura123
+
+#spring.datasource.username=restaurante_user
+#spring.datasource.password=claveSegura123
+
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -11,8 +13,9 @@ spring.security.user.name=admin
 spring.security.user.password={noop}admin123
 spring.main.allow-bean-definition-overriding=true
 server.address=0.0.0.0
-#spring.datasource.username=root
-#spring.datasource.password=changeme
+
+spring.datasource.username=root
+spring.datasource.password=changeme
 
 #Mejoras: 
 #1- La contraseña tenga requisitos: Mas de 8 caracteres, 2 numeros minimo, una letra en mayuscula HECHO
