--- a/ANDROID/StockWise/app/src/main/AndroidManifest.xml
+++ b/ANDROID/StockWise/app/src/main/AndroidManifest.xml
@@ -9,6 +9,8 @@
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
+
 
     <application android:networkSecurityConfig="@xml/network_security_config"
         android:allowBackup="true"
@@ -20,7 +22,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HelloWorld"
         tools:targetApi="31">
-
+        <service android:name=".service.LlamadaPollingService" />
         <activity
             android:name=".service.MainActivity"
             android:exported="true"
